# worktime

./: .gitignore  Pipfile  README.md  pyproject.toml  report.py  requirements.txt  worktime.py
worktime/: analyzer.py  punch.py  report.py  tracker.py
