[project]
name = "worktime"
version = "0.1.0"
description = ""
authors = [
    {name = "Hans-Erik Floryd", email = "hans-erik.floryd@rt-labs.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=10.4.0",
    "python-daemon>=3.0.1",
    "dbus-idle>=1.0.0",
    "pyautogui>=0.9.54",
    "mss>=9.0.1",
    "rich>=14.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
]

[project.scripts]
report = "worktime.report:run"
worktime = "worktime.tracker:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
